--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "passgen-electron",
+  "name": "passgen",
   "version": "1.0.0",
   "description": "Password Generator",
   "main": "main.js",
