--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
-  "name": "passgen",
+  "name": "pass-gen",
   "version": "1.0.0",
   "description": "Password Generator",
   "main": "main.js",
-  "repository": "https://github.com/ranaintizar/passgen-electron.git",
-  "author": "ranaintizar <intizaralirana2@gmail.com>",
+  "repository": "https://github.com/ranathedev/passgen-electron.git",
+  "author": "ranathedev <intizaralirana2@gmail.com>",
   "license": "MIT",
   "scripts": {
     "start": "electron .",
-    "build:win": "electron-packager . PassGen --platform=win32 --arch=x64",
-    "build:linux": "electron-packager . PassGen --platform=linux --arch=x64",
-    "build:mac": "electron-packager . PassGen --platform=darwin"
+    "build:win": "npx electron-packager . PassGen --platform=win32 --arch=x64",
+    "build:linux": "npx electron-packager . PassGen --platform=linux --arch=x64",
+    "build:mac": "npx electron-packager . PassGen --platform=darwin",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder --linux snap"
   },
+  "keywords": [
+    "Password",
+    "Password Generator",
+    "Strong Password Generator",
+    "Easy Password Generator",
+    "Simple Password Generator"
+  ],
   "devDependencies": {
-    "electron": "^26.2.4"
+    "electron": "^26.2.4",
+    "electron-builder": "^24.9.1"
   }
 }
